<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Qatar Events</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="signup_t1">DOHA</string>
	<string name="signup_t2">EVENTS</string>
	<string name="signup_footer_text">Already have an account? Log In.</string>
	<string name="facebook_login">Facebook Login</string>
	<string name="registerby_email">Register by Email</string>
	<string name="powered_by">Powered by</string>
	<string name="i">I</string>
	<string name="heart">\u2764</string>
	<string name="q">Q</string>
	<string name="bg">background image</string>
    <string name="title_activity_login_options">LoginOptions</string>
    <string name="already_have_an_account">Already have an account? Log In</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="register">Register</string>
    <string name="back">&lt; Back</string>
    <string name="sign_up_to_find_out">Sign up to find out what\'s on in Doha!</string>
    <string name="your_name">Username</string>
    <string name="your_lastname">Last Name</string>
    <string name="your_email">Email</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="use_your_email_address">Use your email address</string>
    <string name="or">OR</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_events">Events</string>
    <string name="events">EVENTS</string>
    <string name="my_channels">MY CHANNELS</string>
    <string name="feedback">FEEDBACK</string>
    <string name="favorites">Favorites</string>
    <string name="trending">Trending</string>
    <string name="add_channels">Add Channels</string>
    <string name="spread_the_world">Spread the world</string>
    <string name="get_in_touch">Get in touch</string>
    <string name="eventss">Events</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="later">Later</string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="title_activity_filter">Filter</string>
    <string name="filter">Filter</string>
    <string name="misc">MISC</string>
    <string name="sport">SPORT</string>
    <string name="exhibitions">EXHIBITIONS</string>
    <string name="culture">CULTURE</string>
    <string name="social">SOCIAL</string>
    <string name="entertainment">ENTERTAINMENT</string>
    <string name="night">NIGHT</string>
    <string name="title_activity_filtered_events">FilteredEvents</string>
    <string name="title_activity_add_channels">AddChannels</string>
    <string name="get_started">Get started by subscribing to a few channels.</string>
    <string name="create_event">Create Event</string>
    <string name="create">CREATE</string>
    <string name="event_name">Event Name</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="event_type">Event Type</string>
    <string name="select_event_type">Select Event Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="description">Description</string>
    <string name="enter_event_description">Enter Event Description</string>
    <string name="add_photo">Add Photo</string>
    <string name="price">Price</string>
    <string name="select_class">Select Class</string>
    <string name="enter_price">Enter Price</string>
    <string name="its_free">It\'s Free!</string>
    <string name="ticket_purchase">Ticket Purchase</string>
    <string name="no_tickets_needed">No Tickets Needed</string>
    <string name="at_the_door">At The Door</string>
    <string name="shops">Shops</string>
    <string name="online">Online</string>
    <string name="location">Location</string>
    <string name="location_name">Location Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="find_address_on_map">Find Address on Map</string>
    <string name="title_activity_event_details">EventDetails</string>
    <string name="details">Details</string>
    <string name="title_activity_buy_ticket">BuyTicket</string>
    <string name="ticketing">Ticketing</string>
    <string name="yalla">Yalla!</string>
    <string name="facebook_app_id">943303882355764</string>
    <string name="title_facebook_login">Facebook Login</string>
     <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="exception">Exception: %1$s</string>
    <string name="Section">Section</string>
    <string name="done">Done</string>
    <string name="addchannel_1">Katara Cultural Village</string>
    <string name="addchannel_2">Mathaf : Arab Muesum of Modern Art</string>
    <string name="no_events_found">No events found</string>
    <string name="get_dir">Get Directions</string>
    <string name="add_to_cal">Add to Calendar</string>
    <string name="ra">></string>
</resources>
