<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
	<ImageView
	    android:id="@+id/qatar_bg"
	    android:background="@drawable/signupbg" 
	    android:contentDescription="@string/bg"
	    android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
	</ImageView>
	
		    <TextView
        android:id="@+id/doha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dim_doha_marginTop"
        android:text="@string/signup_t1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/dim_doha_textSize" />

    <TextView
        android:id="@+id/events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/doha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dim_events_marginTop"
        android:text="@string/signup_t2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/dim_events_textSize" />
	
    <TextView
        android:id="@+id/aha_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dim_ahalogin_marginBottom"
        android:text="@string/signup_footer_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/dim_ahalogin_textSize"
        android:clickable="true" />

    <LinearLayout
        android:id="@+id/LS1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/doha"
        android:layout_marginTop="@dimen/dim_ls1_marginTop"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/poweredby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dim_poweredby_marginTop"
            android:text="@string/powered_by"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#7d7d92"
            android:textSize="@dimen/dim_poweredby_textSize" />

        <LinearLayout
            android:id="@+id/LS2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/signup_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dim_signup_i_marginRight"
                android:text="@string/i"
                android:textColor="#7d7d92"
                android:textSize="@dimen/dim_signup_i_textSize" />

            <TextView
                android:id="@+id/heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heart"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#7d7d92"
                android:textSize="@dimen/dim_heart_textSize" />

            <TextView
                android:id="@+id/signup_q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_signup_q_marginLeft"
                android:text="@string/q"
                android:textColor="#7d7d92"
                android:textSize="@dimen/dim_signup_q_textSize" />
        </LinearLayout>
    </LinearLayout>


		<com.facebook.widget.LoginButton
         android:id="@+id/facebook_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/LS1"
         android:layout_alignLeft="@+id/aha_login"
         android:layout_alignRight="@+id/aha_login"
         android:layout_marginTop="@dimen/dim_facebook_login_marginTop"
         android:layout_marginBottom="@dimen/dim_facebook_login_marginBottom"
         android:background="@drawable/roundedcorner"
         android:padding="@dimen/dim_facebook_login_padding"
         android:text="@string/facebook_login"
         android:textColor="#fff"
         android:textSize="@dimen/dim_facebook_login_textSize"
          />
	
      <Button
         android:id="@+id/registerby_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/facebook_login"
         android:layout_alignLeft="@+id/facebook_login"
         android:layout_alignRight="@+id/facebook_login"
         android:layout_marginBottom="@dimen/dim_registerby_email_marginBottom"
         android:background="@drawable/roundedcorner"
         android:padding="@dimen/dim_registerby_email_padding"
         android:text="@string/registerby_email"
         android:textColor="#fff"
         android:textSize="@dimen/dim_registerby_email_textSize" />
      
</RelativeLayout>