<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373A3E" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#00000000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#00000000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#00000000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#00000000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#00000000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#00000000" />
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/shadowbottom" />

    <TextView
        android:id="@+id/misc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view1"
        android:background="#A31221"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/misc"
        android:layout_marginTop="4dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/sport"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/misc"
        android:background="#E07E00"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/sport"
        android:layout_marginTop="4dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/exhibition"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/sport"
        android:background="#E6B300"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/exhibitions"
        android:layout_marginTop="4dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/culture"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/exhibition"
        android:background="#00A33D"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/culture"
        android:layout_marginTop="4dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/social"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/culture"
        android:background="#0380D7"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/social"
        android:layout_marginTop="4dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/entertainment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/social"
        android:background="#0042BC"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/entertainment"
        android:layout_marginTop="4dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/night"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/entertainment"
        android:layout_marginTop="4dp"
        android:background="#6F43AD"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/night"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="normal" />

</RelativeLayout>