<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373A3E" >
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/register_llayout_paddingBottom"
            android:paddingTop="@dimen/register_llayout_paddingTop" >

            <TextView
                android:id="@+id/signuptofindout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_to_find_out"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/register_signuptofindout_textSize"
                android:textStyle="normal" />

            <RelativeLayout
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/register_llayout_camera_marginBottom"
                android:layout_marginTop="@dimen/register_llayout_camera_marginTop" >

                <ImageView
                    android:id="@+id/click_image"
                    android:layout_width="@dimen/register_click_image_width"
                    android:layout_height="@dimen/register_click_image_height"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/camera" />
                
                

            </RelativeLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/register_view_height"
                android:background="@drawable/shadowtop" />

            <LinearLayout
                android:id="@+id/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:orientation="vertical"
                android:paddingBottom="@dimen/register_llayout_form_paddingBottom"
                android:paddingLeft="@dimen/register_llayout_form_paddingLeft"
                android:paddingRight="@dimen/register_llayout_form_paddingRight"
                android:paddingTop="@dimen/register_llayout_form_paddingTop" >

                <EditText
                    android:id="@+id/reg_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/register_name_height"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/your_name"
                    android:inputType="textCapWords"
                    android:paddingLeft="@dimen/register_name_paddingLeft"
                    android:paddingRight="@dimen/register_name_paddingRight"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/register_name_textSize"
                    android:textStyle="normal" />
                
                   <View
                    android:id="@+id/view_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/register_viewname_height"
                    android:background="#8C8C8C" />

                <EditText
                    android:id="@+id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/register_email_height"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/your_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/register_email_paddingLeft"
                    android:paddingRight="@dimen/register_email_paddingRight"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/register_email_textSize"
                    android:textStyle="normal" />

                <View
                    android:id="@+id/view_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/register_viewemail_height"
                    android:background="#8C8C8C" />

                <EditText
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/register_password_height"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/register_password_paddingLeft"
                    android:paddingRight="@dimen/register_password_paddingRight"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/register_password_textSize"
                    android:textStyle="normal" />

                <View
                    android:id="@+id/view_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/register_viewpassword_height"
                    android:background="#8C8C8C" />

                <EditText
                    android:id="@+id/reg_vpassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/register_vpassword_height"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/verify_password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/register_vpassword_paddingLeft"
                    android:paddingRight="@dimen/register_vpassword_paddingRight"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/register_vpassword_textSize"
                    android:textStyle="normal" />
            </LinearLayout>

            <View
                android:id="@+id/view_vpassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/register_viewvpassword_height"
                android:background="@drawable/shadowbottom" />

            <Button
                android:id="@+id/register_yalla"
                android:layout_width="@dimen/register_yalla_width"
                android:layout_height="@dimen/register_yalla_height"
                android:layout_marginTop="@dimen/register_yalla_marginTop"
                android:background="@drawable/roundedcorner" 
                android:text="@string/yalla"
                android:textSize="@dimen/register_yalla_textSize"
                android:textColor="#fff"/>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_shadowbottom_height"
        android:background="@drawable/shadowbottom" />

</RelativeLayout>